--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Penrose</title>
+    <script src="./assets/script.js"></script>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
+
 <body>
-    
+    <div id="title">Hello world</div>
+    <div class="desciption">
+        <div class="button">a</div>
+        <div class="button">b</div>
+    </div>
 </body>
 </html>
