--- a/test/c/home.html
+++ b/test/c/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Penrose - AI-Powered Construction Scheduling</title>
+    <title>Penrose Home</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -14,6 +14,7 @@
             <div class="logo">Penrose</div>
             <nav>
                 <ul>
+                    <!--links to be filled-->
                     <li><a href="#hero">Home</a></li>
                     <li><a href="#product-intro">Product</a></li>
                     <li><a href="#company-intro">About Us</a></li>
