--- a/test/latest/index.html
+++ b/test/latest/index.html
@@ -9,27 +9,7 @@
 </head>
 <body>
 
-    <header id="main-header">
-        <div class="container">
-            <div class="logo">Penrose</div>
-            <nav>
-                <ul>
-                    <li><a href="#hero">Home</a></li>
-                    <li><a href="#product-intro">Product</a></li>
-                    <li><a href="#company-intro">About Us</a></li>
-                    <li><a href="#testimonials">Testimonials</a></li>
-                    <li><a href="#">Workspace</a></li>
-                    <li><a href="#">Dashboard</a></li>
-                </ul>
-            </nav>
-            <div class="header-actions">
-                <a href="#" class="btn btn-secondary btn-small">Sign In</a>
-                </div>
-            <button class="mobile-nav-toggle" aria-label="Toggle navigation">
-                <span class="hamburger-icon"></span>
-            </button>
-        </div>
-    </header>
+    <header id="main-header"></header>
 
     <section id="hero" class="hero-section content-row">
         <div class="container">
@@ -200,5 +180,6 @@
     </footer>
 
     <script src="./src/script.js"></script>
+    <script type="module" src="./src/main.jsx"></script>
 </body>
 </html>
