feat: demo (dashboard)

--- a/test/d/index.html
+++ b/test/d/index.html
@@ -7,14 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header id="main-header">
-        <div class="container">
+<!-- <body>
+     <header id="main-header"> -->
+        <!-- <div class="container">
             <div class="logo">Penrose</div>
             <nav>
-                <ul>
+                <ul> -->
                     <!--links to be filled-->
-                    <li><a href="#hero">Dashboard</a></li>
+                    <!-- <li><a href="#hero">Dashboard</a></li>
                     <li><a href="#product-intro">Projects</a></li>
                     <li><a href="#company-intro">Programs</a></li>
                     <li><a href="#testimonials">Schedule Meeting</a></li>
@@ -27,8 +27,8 @@
                 <span class="hamburger-icon"></span>
             </button>
         </div>
-    </header>
-    <!-- <nav class="navbar">
+    </header> -->
+    <nav class="navbar">
         <div class="navbar-left">
             <span class="logo">Penrose</span>
         </div>
@@ -38,7 +38,7 @@
             <a href="#" class="nav-item">Program</a>
             <a href="#" class="nav-item">Schedule Meeting</a>
         </div>
-    </nav> -->
+    </nav>
 
     <div class="main-content">
         <h1 class="welcome-greeting">Welcome back, <span id="userName">[User name]</span>!</h1>
