--- a/demo/index.html
+++ b/demo/index.html
@@ -125,19 +125,29 @@
             <h2>Trusted by Industry Leaders</h2>
             <div class="testimonial-carousel">
                 <div class="testimonial-slide active">
-                    <p>"Penrose has been a game-changer for our project timelines. The AI-powered risk prediction saved us countless hours and potential delays."</p>
-                    <h4>- John Doe, Project Manager at BuildWell Corp</h4>
+                    <p>"You’re speaking my language. Everyone talks AI but few “get” it. I want this to unlock productivity gains, so I can be a more effective to my clients."</p>
+                    <h4>- Scheduling Lead, Michael Baker International</h4>
                     <img src="https://via.placeholder.com/150x50/CCCCCC/FFFFFF?text=BuildWell+Logo" alt="BuildWell Corp Logo" class="client-logo">
                 </div>
                 <div class="testimonial-slide">
-                    <p>"The ease of use and the accuracy of the scheduling algorithms are unparalleled. Our team collaboration has improved significantly."</p>
-                    <h4>- Jane Smith, CEO at InnovateConstruct</h4>
+                    <p>"Our industry needed this decades ago. Count me in. Schedule reviews are not generating the full potential strategic value they could offer."</p>
+                    <h4>- Director of Project Controls, AECOM</h4>
                     <img src="https://via.placeholder.com/150x50/CCCCCC/FFFFFF?text=InnovateConstruct+Logo" alt="InnovateConstruct Logo" class="client-logo">
                 </div>
                 <div class="testimonial-slide">
-                    <p>"We were skeptical about AI in scheduling, but Penrose proved its worth within the first month. Highly recommended!"</p>
-                    <h4>- Robert Brown, Operations Director at Solid Foundations Ltd.</h4>
+                    <p>"Get us the MVP. I’ve explored other vendors but they scratch the surface. This frees up laborious prep work to focus my team’s time on data-backed PMing."</p>
+                    <h4>- Deputy Executive, Office of Program Management, Los Angeles County Metropolitan Transportation Authority</h4>
                     <img src="https://via.placeholder.com/150x50/CCCCCC/FFFFFF?text=SolidFoundations+Logo" alt="Solid Foundations Ltd. Logo" class="client-logo">
+                </div>
+                <div class="testimonial-slide">
+                    <p>"This is timely and critical. I want to see this. Our 2024 capital plan doubled YoY to $5B. Our 5-year pipeline is at $50B+. I need timely insights to get ahead of any schedule risks."</p>
+                    <h4>- Project Controls Manager, National Railroad Passenger Corporation (Amtrak)</h4>
+                    <img src="https://via.placeholder.com/150x50/CCCCCC/FFFFFF?text=RailwaySolutions+Logo" alt="Railway Solutions Logo" class="client-logo">
+                </div>
+                <div class="testimonial-slide">
+                    <p>"This is a no-brainer with all the time, labor, and cost savings at stake for my teams. Current processes feel like a chore and my team is already overworked."</p>
+                    <h4>- Design-Build Manager, Kiewit Corporation</h4>
+                    <img src="https://via.placeholder.com/150x50/CCCCCC/FFFFFF?text=UrbanBuild+Logo" alt="UrbanBuild Group Logo" class="client-logo">
                 </div>
                 <div class="carousel-controls">
                     <button class="prev">&#10094;</button>
