fixed: link to dashboard

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#company-intro">About Us</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#">Workspace</a></li>
-                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="./page/dashboard.html">Dashboard</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
