--- a/demo/index.html
+++ b/demo/index.html
@@ -10,31 +10,7 @@
 <body>
 
     <!-- logo link to home page url -->
-    <header id="main-header">
-        <div class="container">
-            <div class="logo">
-                <a href="#hero" class="logo-link">
-                    <img src="../img/Logo BW.png" alt="Penrose Logo" class="logo-image">
-                </a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#hero">Home</a></li>
-                    <li><a href="#product-intro">Product</a></li>
-                    <li><a href="#company-intro">About Us</a></li>
-                    <li><a href="#testimonials">Testimonials</a></li>
-                    <li><a href="#">Workspace</a></li>
-                    <li><a href="./page/dashboard.html">Dashboard</a></li>
-                </ul>
-            </nav>
-            <div class="header-actions">
-                <a href="#" class="btn btn-secondary btn-small">Sign In</a>
-                </div>
-            <button class="mobile-nav-toggle" aria-label="Toggle navigation">
-                <span class="hamburger-icon"></span>
-            </button>
-        </div>
-    </header>
+    <header id="main-header"></header>
 
     <section id="hero" class="hero-section content-row">
         <div class="container">
@@ -215,5 +191,6 @@
     </footer>
 
     <script src="../src/script.js"></script>
+    <script type="module" src="../src/main.jsx"></script>
 </body>
 </html>
