--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,7 @@
     <!-- logo link to home page url -->
     <header id="main-header"></header>
 
+    <div id="hero-adjusted"></div>
     <section id="hero" class="hero-section content-row">
         <div class="container">
             <div class="hero-content">
@@ -28,6 +29,7 @@
         </div>
     </section>
 
+    <div id="product-intro-adjusted"></div>
     <section id="product-intro" class="content-row lazy-load">
         <div class="container">
             <h2>How Our AI Optimizes Your Schedule</h2>
@@ -75,6 +77,7 @@
         </div>
     </section>
 
+    <div id="company-intro-adjusted"></div>
     <section id="company-intro" class="content-row lazy-load">
         <div class="container">
             <h2>Building the Future of Construction Management</h2>
@@ -96,6 +99,7 @@
         </div>
     </section>
 
+    <div id="testimonial-adjusted"></div>
     <section id="testimonials" class="content-row lazy-load">
         <div class="container">
             <h2>Trusted by Industry Leaders</h2>
