--- a/demo/index.html
+++ b/demo/index.html
@@ -99,7 +99,7 @@
         </div>
     </section>
 
-    <div id="testimonial-adjusted"></div>
+    <div id="testimonials-adjusted"></div>
     <section id="testimonials" class="content-row lazy-load">
         <div class="container">
             <h2>Trusted by Industry Leaders</h2>
