fixed: minor update

--- a/demo/index.html
+++ b/demo/index.html
@@ -107,7 +107,7 @@
                 <div class="testimonial-slide active">
                     <p>"You’re speaking my language. Everyone talks AI but few “get” it. I want this to unlock productivity gains, so I can be a more effective to my clients."</p>
                     <h4>- Scheduling Lead, Michael Baker International</h4>
-                    <img src="https://via.placeholder.com/150x50/CCCCCC/FFFFFF?text=BuildWell+Logo" alt="BuildWell Corp Logo" class="client-logo">
+                    <img src="./img/Michael Baker_Logo.png" alt="Michael Baker Logo" class="client-logo">
                 </div>
                 <div class="testimonial-slide">
                     <p>"Our industry needed this decades ago. Count me in. Schedule reviews are not generating the full potential strategic value they could offer."</p>
