feat: client logos

--- a/demo/index.html
+++ b/demo/index.html
@@ -107,27 +107,27 @@
                 <div class="testimonial-slide active">
                     <p>"You’re speaking my language. Everyone talks AI but few “get” it. I want this to unlock productivity gains, so I can be a more effective to my clients."</p>
                     <h4>- Scheduling Lead, Michael Baker International</h4>
-                    <img src="./img/Michael Baker_Logo.png" alt="Michael Baker Logo" class="client-logo">
+                    <span><img src="./img/client-logo/michael_baker_logo.jpeg" alt="Michael Baker Logo" class="client-logo"></span>
                 </div>
                 <div class="testimonial-slide">
                     <p>"Our industry needed this decades ago. Count me in. Schedule reviews are not generating the full potential strategic value they could offer."</p>
                     <h4>- Director of Project Controls, AECOM</h4>
-                    <img src="https://via.placeholder.com/150x50/CCCCCC/FFFFFF?text=InnovateConstruct+Logo" alt="InnovateConstruct Logo" class="client-logo">
+                    <span><img src="./img/client-logo/AECOM-logo.png" alt="AECOM Logo" class="client-logo"></span>
                 </div>
                 <div class="testimonial-slide">
                     <p>"Get us the MVP. I’ve explored other vendors but they scratch the surface. This frees up laborious prep work to focus my team’s time on data-backed PMing."</p>
                     <h4>- Deputy Executive, Office of Program Management, Los Angeles County Metropolitan Transportation Authority</h4>
-                    <img src="https://via.placeholder.com/150x50/CCCCCC/FFFFFF?text=SolidFoundations+Logo" alt="Solid Foundations Ltd. Logo" class="client-logo">
+                    <span><img src="./img/client-logo/LA-Metro-Logo.png" alt="LA Metro Logo" class="client-logo"></span>
                 </div>
                 <div class="testimonial-slide">
                     <p>"This is timely and critical. I want to see this. Our 2024 capital plan doubled YoY to $5B. Our 5-year pipeline is at $50B+. I need timely insights to get ahead of any schedule risks."</p>
                     <h4>- Project Controls Manager, National Railroad Passenger Corporation (Amtrak)</h4>
-                    <img src="https://via.placeholder.com/150x50/CCCCCC/FFFFFF?text=RailwaySolutions+Logo" alt="Railway Solutions Logo" class="client-logo">
+                    <span><img src="./img/client-logo/Amtrak_logo.svg.png" alt="Amtrak Logo" class="client-logo"></span>
                 </div>
                 <div class="testimonial-slide">
                     <p>"This is a no-brainer with all the time, labor, and cost savings at stake for my teams. Current processes feel like a chore and my team is already overworked."</p>
                     <h4>- Design-Build Manager, Kiewit Corporation</h4>
-                    <img src="https://via.placeholder.com/150x50/CCCCCC/FFFFFF?text=UrbanBuild+Logo" alt="UrbanBuild Group Logo" class="client-logo">
+                    <span><img src="./img/client-logo/Kiewit-116c-2.png" alt="Kiewit Corporation Logo" class="client-logo"></span>
                 </div>
                 <div class="carousel-controls">
                     <button class="prev">&#10094;</button>
