--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <title>Penrose - AI-Powered Construction Scheduling</title>
     <link rel="stylesheet" href="../src/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./img/Logo square.png">
 </head>
 <body>
 
