--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,7 @@
                 <p class="subtext">Streamline your construction project scheduling with AI-powered automation—save time, reduce delays, and stay on budget.</p>
                 <div class="cta-buttons">
                     <a href="#" class="btn btn-primary">Get Started</a>
-                    <a href="#" class="btn btn-secondary">Try Free Demo</a>
+                    <a href="#" class="btn btn-2">Try Free Demo</a>
                 </div>
             </div>
             <div class="hero-visual">
