--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
                 <h1>Revolutionize Construction Scheduling with AI.</h1>
                 <p class="subtext">Streamline your construction project scheduling with AI-powered automation—save time, reduce delays, and stay on budget.</p>
                 <div class="cta-buttons">
-                    <a href="#" class="btn btn-primary">Get Started</a>
+                    <a href="#" class="btn btn-1">Get Started</a>
                     <a href="#" class="btn btn-2">Try Free Demo</a>
                 </div>
             </div>
