--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penrose - AI-Powered Construction Scheduling</title>
-    <link rel="stylesheet" href="../src/index.css">
+    <link rel="stylesheet" href="./src/index/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="./img/Logo square.png">
 </head>
@@ -195,7 +195,7 @@
         </div>
     </footer>
 
-    <script src="../src/script.js"></script>
-    <script type="module" src="../src/main.jsx"></script>
+    <script src="./src/index/script.js"></script>
+    <script type="module" src="./src/index/main.jsx"></script>
 </body>
 </html>
