feat: fancy background of landing page

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,9 @@
     <!-- logo link to home page url -->
     <header id="main-header"></header>
 
+    <div class="fixed-background"></div>
+
+
     <div id="hero-adjusted"></div>
     <section id="hero" class="hero-section content-row">
         <div class="container">
@@ -148,6 +151,36 @@
             </div>
         </div>
     </section>
+
+        <div class="card-deck">
+        <div class="card">
+            <div class="hero-content">
+                <h1>Revolutionize Construction Scheduling with AI.</h1>
+                <p class="subtext">Streamline your construction project scheduling with AI-powered automation—save time, reduce delays, and stay on budget.</p>
+                <div class="cta-buttons">
+                    <a href="#" class="btn btn-1">Get Started</a>
+                    <a href="#" class="btn btn-2">Try Free Demo</a>
+                </div>
+            </div>
+            <div class="hero-visual">
+                <img src="../img/dashboard ui.png" alt="AI-Powered Scheduling UI">
+            </div>
+        </div>
+
+        <div class="card">
+            <h2>Card 2</h2>
+            <p>Scroll down. Notice how the background grid stays fixed, and the snake moves freely behind it.</p>
+        </div>
+        <div class="card">
+            <h2>Card 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="card">
+            <h2>Card 4</h2>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+    </div>
+    
 
     <footer id="main-footer" class="content-row lazy-load">
         <div class="container">
