fix: background triangle grid size bug

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penrose - AI-Powered Construction Scheduling</title>
     <link rel="stylesheet" href="./src/index/index.css">
-    <link rel="stylesheet" href="./src/index/intro-anime.css">
+    <!-- <link rel="stylesheet" href="./src/index/intro-anime.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="./img/Logo square.png">
 </head>
@@ -13,9 +13,9 @@
 
     <!-- logo link to home page url -->
     <header id="main-header"></header>
+    <div class="fixed-background"></div>
     <div id="content-in-index">
 
-    <div class="fixed-background"></div>
 
 
     <div id="hero-adjusted"></div>
@@ -202,6 +202,7 @@
         </div>
     </div>
 
+    <!-- intro-anime -->
     <div id="intro-overlay">
         <div class="msg-container">
             <h1 class="primary-msg">Real time progress in <br /><span class="keyword">one dashboard</span></h1>
