--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penrose - AI-Powered Construction Scheduling</title>
     <link rel="stylesheet" href="./src/index/index.css">
-    <!-- <link rel="stylesheet" href="./src/index/intro-anime.css"> -->
+    <link rel="stylesheet" href="./src/index/intro-anime.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="./img/Logo square.png">
 </head>
