--- a/client/index.html
+++ b/client/index.html
@@ -91,7 +91,7 @@
         </section>
 
         <section id="fourier">
-            <div class="div2-container">
+            <div class="div2-container lazy-load">
                 <h1 class="main-headline">Turn Complexity into Clarity.</h1>
                 <p class="sub-headline">
                     From raw, chaotic signals to clear actionable intelligence.
@@ -285,7 +285,12 @@
     <!-- intro-anime -->
     <div id="intro-overlay">
         <div class="msg-container">
-            <h1 class="primary-msg">Real time progress in <br /><span class="keyword">one dashboard</span></h1>
+            <h1 class="primary-msg">
+                Real time progress in <br />
+                <span class="keyword">
+                    <span id="counter-span" class="keyword-gradient">1</span><span id="dashboard-text" class="keyword-gradient"> DASHBOARD</span>
+                </span>
+            </h1>
             <h2 class="secondary-msg">Unleash Total Visibility Across Every Build</h2>
         </div>
         <div class="skip-hint">Double click to skip</div>
